--- a/output/team.html
+++ b/output/team.html
@@ -14,11 +14,29 @@
         <div class="container">
             <div class="row"><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
-            <h5 class="card-header">Andrew Test<br /><br />Engineer</h5>
+            <h5 class="card-header">Andrew Warmath<br /><br />Engineer</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item">Email Address: <a href="mailto:andrew@bc.auto">andrew@bc.auto</a></li>
+                <li class="list-group-item">ID: 1001</li>
+                <li class="list-group-item">Email Address: <a href="mailto:andrew@carmigo.io">andrew@carmigo.io</a></li>
                 <li class="list-group-item">GitHub: <a href="https://github.com/awarmath/">awarmath</a></li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Daniel Kim<br /><br />Manager</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 1002</li>
+                <li class="list-group-item">Email Address: <a href="mailto:daniel@carmigo.io">daniel@carmigo.io</a></li>
+                <li class="list-group-item">Office Phone: 555-5555</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Chris Vasquez<br /><br />Intern</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 1003</li>
+                <li class="list-group-item">Email Address: <a href="mailto:chris@carmigo.io">chris@carmigo.io</a></li>
+                <li class="list-group-item">School: University of Iowa</li>
             </ul>
             </div>
         </div> </div>
